examples/test/testpolicy7833.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7833
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key17: value26
      key6: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value33
          key42: value4
      podSelector:
        matchLabels:
          key47: value19
          key36: value4
          key46: value43
